@@ -1,9 +1,12 @@
 # Possible Mods are Alt, Control, CtrlAlt, ShftAlt, Super,
-#  ShftSuper, CtrlSuper, ALTSuper, NULL(for no Mod key)
+#  ShftSuper, CtrlSuper, AltSuper, NULL(for no Mod key)
 #
 # Set external commands ; use with spawn
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
 CMD xtermcmd;xterm;NULL;
+# Right click on the bar to run a command
+# "barrtclickcmd" is hardcoded so case matters e.g.
+#    CMD barrtclickcmd;dmenu;NULL;
 # To quit the window manager and shutdown or reboot
 # "shutdowncmd" and "rebootcmd" are hardcoded so case matters
 # use with terminate(see bottom of this file)
@@ -48,6 +51,19 @@ KEY ShftSuper;8;client_to_desktop;7;
 KEY ShftSuper;9;client_to_desktop;8;
 KEY ShftSuper;0;client_to_desktop;9;
 #
+KEY CtrlSuper;1;sticky_win;1;
+KEY CtrlSuper;2;sticky_win;2;
+KEY CtrlSuper;3;sticky_win;3;
+KEY CtrlSuper;4;sticky_win;4;
+KEY CtrlSuper;5;sticky_win;5;
+KEY CtrlSuper;6;sticky_win;6;
+KEY CtrlSuper;7;sticky_win;7;
+KEY CtrlSuper;8;sticky_win;8;
+KEY CtrlSuper;9;sticky_win;9;
+KEY CtrlSuper;0;sticky_win;10;
+#
+KEY CtrlSuper;q;unsticky_win;
+#
 KEY Alt;a;rotate_mode;1;
 KEY Alt;c;kill_client;
 KEY Alt;j;next_win;
@@ -86,9 +102,10 @@ KEY ShftAlt;c;switch_mode;4;
 #
 # Show/hide the bar
 KEY Super;b;toggle_bar;
-#
 # Shortcut for xterm
 KEY Super;t;spawn;xtermcmd;
+# Focus the last focused window
+KEY Super;Tab;last_win;
 #
 # Shortcut to exit the window manager
 KEY CtrlAlt;q;quit;
