@@ -1,45 +1,11 @@
 # lines starting with a hash are ignored
+# 
 # Number of DESKTOPS should be first
 DESKTOPS 6
 # Desktop to start on: default is 0
 #DEFAULT_DESK 0
-# Desktop switcher background colours
-# switchertheme colours are :
-#    focused desktop in switcher
-#    unfocused desktop in switcher
-#    unfocused desktop in switcher with opened windows
-#    the bars border
-#    desktop with window that's set the urgent hint
-SWITCHERTHEME #443311;#002030;#004060;#001020;#00FF00;
-# Font and bar backgrounds colours
-# statustheme colours are :
-#    default bar background
-#    focused desktop font in switcher
-#    unfocused desktop font in switcher
-#    unfocused desktop with opened windows font in switcher
-#    the focused window name font in the status bar
-#    five more colours for the external text
-STATUSTHEME #002030;#000000;#ffffff;#999999;#777755;#339933;#aa6644;#ffffff;#dddddd;#999999;
-# windowtheme colours are :
-#    focused window border and unfocused window border
-WINDOWTHEME #443311;#002030;
-# Background colour for the focused window's name in the bar from SWITCHERTHEME
-WNAMEBG 4
-# left align the focused window's name in the bar: 0=true
-LEFT_WINDOWNAME 0
-# max length for the window's name
-WINDOWNAMELENGTH 35
-#
-BORDERWIDTH 2
 # percentage of the desktop for the main window
 MASTERSIZE 52
-# default tiling modes for each desktop(defaults to 0):
-# must end in semicolon
-#     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
-DEFAULTMODE 3;4;0;1;2;3;
-# Set number of extra window/s in the master area(defaults to 0)
-# must end in semicolon
-NMASTER 0;0;1;0;2;0;
 # open new windows in the stack? 0=yes,1=no
 ATTACHASIDE 1
 # if new window is in the stack add it at the top? 0=yes,1=no
@@ -47,26 +13,37 @@ TOPSTACK 1
 # if in stacking mode center window # 0=yes,1=no
 # (1) is best for gimp
 CENTER_STACK 0
+# Window border width
+BORDERWIDTH 2
+# windowtheme colours are :
+#    focused window border and unfocused window border
+WINDOWTHEME #443311;#002030;
+# default tiling modes for each desktop(defaults to 0):
+# must end in semicolon
+#     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
+DEFAULTMODE 3;4;0;1;2;3;
 # Key to use when moving/resizing windows in stacking mode.
 # Default is Alt; other choice is Super, so only uncomment if
 # you want to use the Super key
 #RESIZEMOVEKEY Super
-# Select monitor the bar will be on, not needed with one monitor
-#BAR_MONITOR 1
-# Shorten the bar by (pixels) amount for room for an external app
-# Zero(0) or commented for full length
-#BAR_SHORT 0
+# Set number of extra window/s in the master area(defaults to 0)
+# must end in semicolon
+NMASTER 0;0;1;0;2;0;
+# Useless gaps for the tiling modes in pixels
+# UG_OUT is distance screen edge to window, UG_IN is for between windows
+# UG_BAR is space around the bar
+#UG_OUT 10
+#UG_IN 15
+#UG_BAR 7
+# For semi transparent unfocused windows if using a compositor e.g. compton
+# 100 is opaque
+UF_WIN_ALPHA 65
 # Change from stacking mode to new mode when reaching this many
 # open windows - Off by default
 #AUTO_NUM_OPEN 4
 #AUTO_MODE 3
-# For semi transparent unfocused windows if using a compositor e.g. compton
-# 100 is opaque
-UF_WIN_ALPHA 65
-# For semi transparent bar if using a compositor e.g. compton
-# 100 is opaque
-BAR_ALPHA 75
-# only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
+# Focus method for the mouse. Focus follows mouse movement or mouse
+# button click. Only one should be zero, but none have to be. 
 FOLLOWMOUSE 1
 CLICKTOFOCUS 0
 # Have the bar on top? 0=yes,1=no
@@ -74,18 +51,43 @@ TOPBAR 0
 # Show the bar at startup? 0=yes,1=no. Can be per desktop
 ## e.g. 0;0;1;0;1;
 SHOW_BAR 0
-# Show the number of opened windows in the desktop switcher? 0=yes,1=no
-SHOWNUMOPEN 1
-# Useless gaps for the tiling modes in pixels
-# UG_OUT is distance screen edge to window, UG_IN is for between windows
-# UG_BAR is space around the bar
-#UG_OUT 10
-#UG_IN 15
-#UG_BAR 7
-# How to display the current tiling mode in the bar
-MODENAME [V];[F];[H];[G];[C];
+# Select monitor the bar will be on, not needed with one monitor
+#BAR_MONITOR 1
+# Shorten the bar by (pixels) amount for room for an external app
+# Zero(0) or commented for full length
+#BAR_SHORT 0
 # Name the desktops
 DESKTOP_NAMES one;two;three;four;five;six;
+# Show the number of opened windows in the desktop switcher? 0=yes,1=no
+SHOWNUMOPEN 1
+# How to display the current tiling mode in the bar
+MODENAME [V];[F];[H];[G];[C];
+# left align the focused window's name in the bar: 0=true
+LEFT_WINDOWNAME 0
+# max length for the window's name
+WINDOWNAMELENGTH 35
+# Desktop switcher background colours
+# switchertheme colours are :
+#   0. focused desktop in switcher
+#   1. unfocused desktop in switcher
+#   2. unfocused desktop in switcher with opened windows
+#   3. the bars border
+#   4. desktop with window that's set the urgent hint
+SWITCHERTHEME #443311;#002030;#004060;#001020;#00FF00;
+# Font and bar backgrounds colours
+# statustheme colours are :
+#   0. default bar background
+#   1. focused desktop font in switcher
+#   2. unfocused desktop font in switcher
+#   3. unfocused desktop with opened windows font in switcher
+#   4. the focused window name font in the status bar
+#   5-9 five more colours for the external text
+STATUSTHEME #002030;#000000;#ffffff;#999999;#777755;#339933;#aa6644;#ffffff;#dddddd;#999999;
+# Background colour for the focused window's name in the bar from SWITCHERTHEME
+WNAMEBG 4
+# For semi transparent bar if using a compositor e.g. compton
+# 100 is opaque
+BAR_ALPHA 75
 # Font to use in the bar
 FONTNAME "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*"
 # 
