@@ -1,3 +1,10 @@
+9/4/16
+  Added function last_win() to focus the last focused window with
+   a keyboard shortcut
+  Added option to sticky the focused window on unfocused desktops
+   with a keyboard shortcut
+  Fix for transient window bug in multiple monitor mode
+
 23/11/15
   Fix for keyboards shortcuts using Alt failing
   Fix for window not unmapping with client_to_desktop
